--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -166,6 +166,13 @@ body {
   font-size: 20px;
 }
 
+.topnav .menuIcon {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
 .topnav .search-container {
   float: right;
 }
@@ -252,23 +259,47 @@ body {
 }
 
 @media screen and (max-width: 655px) {
-  .topnav .search-container {
-    float: none;
+  .topnav a:not(:first-child) {
+    display: none;
   }
-  .topnav a,
-  .topnav input[type="text"],
-  .topnav .search-container button {
+
+  .topnav a.menuIcon {
+    float: right;
+    display: block;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .menuIcon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
   }
-  .topnav input[type="text"] {
-    border: 1px solid #ccc;
+
+  .topnav.responsive #userinfo {
+    padding: 0;
+  }
+
+  .topnav .search-container {
+    display: none;
+  }
+
+  .topnav.responsive .search-container {
+    display: block;
+    float: left;
+    padding-left: 16px;
+    padding-bottom: 14px;
   }
 }
+
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
   .leftcolumn,
