--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -542,8 +542,7 @@ input[type="password"]:focus {
   /*border: 1px solid black;*/
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 80px;
-  margin-bottom: 100px;
+  margin: 80px 15px 180px;
   padding-left: 0;
   word-break: break-all;
   list-style-type: none;
@@ -555,7 +554,7 @@ input[type="password"]:focus {
   border: 1px solid #006AA3;
   color: #02044F;
   background-color: #70CDFF;
-  margin: 5px 5px 30px 5px;
+  margin: 5px 10px 30px 10px;
   padding-right: 10px;
   padding-left: 10px;
   padding-bottom: 15px;
@@ -574,8 +573,7 @@ input[type="password"]:focus {
   /*border: 1px solid black;*/
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 80px;
-  margin-bottom: 180px;
+  margin: 80px 15px 180px;
   padding-left: 0;
   word-break: break-all;
   list-style-type: none;
@@ -587,7 +585,7 @@ input[type="password"]:focus {
   border: 1px solid #006AA3;
   color: #02044F;
   background-color: #70CDFF;
-  margin: 5px 5px 30px 5px;
+  margin: 5px 10px 30px 10px;
   padding-right: 10px;
   padding-left: 10px;
   padding-bottom: 15px;
@@ -620,44 +618,95 @@ input[type="password"]:focus {
 
 
 #newBlogPopup {
-	/* visibility: hidden; */
-	/* display: flex; */
-	/* justify-content: center; */
-	/* text-align: center; */
-	position: absolute;
-	background: grey;
-	border: 2px solid #3c3c3c;
-	color: white;
-	z-index: 100;
-	/* width: 900px; */
-	height: 70%;
-	padding: 32px;
-	top: 25%;
-	/* margin: -25px 0 0 -25px; */
-	right: 50%;
-	width: 50%;
-	left: 30%;
+  /* visibility: hidden; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* text-align: center; */
+  position: absolute;
+  background: #70CDFF;
+  border: 2px solid #3c3c3c;
+  border-radius: 10px;
+  color: #02044F;
+  z-index: 100;
+  /* width: 900px; */
+  height: 70%;
+  padding: 32px;
+  top: 25%;
+  /* margin: -25px 0 0 -25px; */
+  right: 50%;
+  width: 50%;
+  left: 30%;
 }
 
+#newBlogPopup h1 {
+  font-family: 'Berkshire Swash', cursive;
+}
+
+#newBlogPopup label {
+  margin-bottom: 10px;
+}
+
+#newBlogPopup button {
+  border-radius: 10px;
+  border: 1px solid #02044F;
+  color: white;
+  background-color: #006AA3;
+  margin: 20px;
+  padding: 5px;
+  box-shadow: -2px 2px 5px #0077B6;
+}
+
+#newBlogPopup input,
+#newBlogPopup textarea,
+#newBlogPopup select {
+  border-radius: 10px;
+  margin-top: 10px;
+}
 
 #editBlogInfoPopup {
-	/* visibility: hidden; */
-	/* display: flex; */
-	/* justify-content: center; */
-	/* text-align: center; */
-	position: absolute;
-	background: grey;
-	border: 2px solid #3c3c3c;
-	color: white;
-	z-index: 100;
-	/* width: 900px; */
-	height: 70%;
-	padding: 32px;
-	top: 25%;
-	/* margin: -25px 0 0 -25px; */
-	right: 50%;
-	width: 50%;
-	left: 30%;
+  /* visibility: hidden; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* text-align: center; */
+  position: absolute;
+  background: #70CDFF;
+  border: 2px solid #3c3c3c;
+  border-radius: 10px;
+  color: #02044F;
+  z-index: 100;
+  /* width: 900px; */
+  height: 70%;
+  padding: 32px;
+  top: 25%;
+  /* margin: -25px 0 0 -25px; */
+  right: 50%;
+  width: 50%;
+  left: 30%;
+}
+
+#editBlogInfoPopup h1 {
+  font-family: 'Berkshire Swash', cursive;
+}
+
+#editBlogInfoPopup label {
+  margin-bottom: 10px;
+}
+
+#editBlogInfoPopup button {
+  border-radius: 10px;
+  border: 1px solid #02044F;
+  color: white;
+  background-color: #006AA3;
+  margin: 20px;
+  padding: 5px;
+  box-shadow: -2px 2px 5px #0077B6;
+}
+
+#editBlogInfoPopup input,
+#editBlogInfoPopup textarea,
+#editBlogInfoPopup select {
+  border-radius: 10px;
+  margin-top: 10px;
 }
 
 
@@ -667,9 +716,10 @@ input[type="password"]:focus {
 	/* justify-content: center; */
 	/* text-align: center; */
 	position: absolute;
-	background: red;
-	border: 2px solid #3c3c3c;
-	color: white;
+  background: #70CDFF;
+  border: 2px solid #3c3c3c;
+  border-radius: 10px;
+  color: #02044F;
 	z-index: 100;
 	/* width: 900px; */
 	height: 70%;
@@ -679,6 +729,31 @@ input[type="password"]:focus {
 	right: 50%;
 	width: 50%;
 	left: 30%;
+}
+
+#modifyBlogPopup h1 {
+  font-family: 'Berkshire Swash', cursive;
+}
+
+#modifyBlogPopup label {
+  margin-bottom: 10px;
+}
+
+#modifyBlogPopup button {
+  border-radius: 10px;
+  border: 1px solid #02044F;
+  color: white;
+  background-color: #006AA3;
+  margin: 20px;
+  padding: 5px;
+  box-shadow: -2px 2px 5px #0077B6;
+}
+
+#modifyBlogPopup input,
+#modifyBlogPopup textarea,
+#modifyBlogPopup select {
+  border-radius: 10px;
+  margin-top: 10px;
 }
 
 .modaloverlay {
@@ -693,8 +768,14 @@ input[type="password"]:focus {
 
 
 #editBlogInfo {
-margin-top: 5%;
-float: right;
+  margin-top: 5%;
+  float: right;
+  border-radius: 10px;
+  border: 1px solid #02044F;
+  background-color: #70CDFF;
+  color: #02044F;
+  box-shadow: -2px 2px 5px #0077B6;
+  padding: 5px 10px;
 }
 
 .blogikuvat {
@@ -721,17 +802,18 @@ float: right;
 }
 
 button#addNewPost {
-	width: 50%;
-	margin-top: 20px;
-	padding: 4px;
-	border-radius: 5px;
-	margin-left: 25%;
-	display: flex;
-	justify-content: center;
+  width: 50%;
+  margin-top: 20px;
+  margin-left: 25%;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  background: linear-gradient(5deg, #000, #6c6c6c);
+  border-radius: 10px;
+  border: 1px solid #02044F;
+  background-color: #006AA3;
   color: white;
-  border: none;
+  box-shadow: -2px 2px 5px #0077B6;
+  padding: 5px 10px;
   cursor: pointer;
 }
 
